# Amazon_AI_Bedrock

./: .gitignore  link.txt
amazon-bedrock-agentcore-samples/01-tutorials/02-AgentCore-gateway/: README.md
amazon-bedrock-agentcore-samples/01-tutorials/09-AgentCore-E2E/: Optional-lab-identity.ipynb  lab-03-agentcore-gateway.ipynb  lab-06-frontend.ipynb
amazon-bedrock-agentcore-samples/02-use-cases/: README.md
amazon-bedrock-agentcore-samples/02-use-cases/A2A-multi-agent-incident-response/: README.md
amazon-bedrock-agentcore-samples/02-use-cases/SRE-agent/: verify_report.py
amazon-bedrock-agentcore-samples/02-use-cases/cost-optimization-agent/: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  cleanup.py  cost_optimization_agent.py  deploy.py  deploy_wrapper.py  pyproject.toml  requirements.txt  run_test.py  test_agentcore_runtime.py  test_local.py
amazon-bedrock-agentcore-samples/02-use-cases/cost-optimization-agent/tools/: __init__.py  budget_tools.py  cost_explorer_tools.py
amazon-bedrock-agentcore-samples/02-use-cases/customer-support-assistant/: README.md  pyproject.toml
amazon-bedrock-agentcore-samples/02-use-cases/customer-support-assistant/agent_config/: agent.py
amazon-bedrock-agentcore-samples/02-use-cases/customer-support-assistant/scripts/: agentcore_gateway.py  cleanup.sh  list_ssm_parameters.sh  prereq.sh  utils.py
amazon-bedrock-agentcore-samples/02-use-cases/customer-support-assistant/test/: test_gateway.py  test_google_tool.py  test_memory.py
amazon-bedrock-agentcore-samples/02-use-cases/farm-management-advisor/: 01_plant_advisor_gateway.ipynb  02_plant_advisor_runtime_mem.ipynb  requirements.txt
amazon-bedrock-agentcore-samples/02-use-cases/finance-personal-assistant/: lab1-develop_a_personal_budget_assistant_strands_agent.ipynb  (+2 more)
amazon-bedrock-agentcore-samples/03-integrations/: README.md
amazon-bedrock-agentcore-samples/03-integrations/observability/openlit/: README.md  main.py  openlit_config.py  pyproject.toml  travel_agent.py
amazon-bedrock-agentcore-samples/03-integrations/observability/simple-dual-observability/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  simple_observability.py
amazon-bedrock-agentcore-samples/03-integrations/observability/simple-dual-observability/agent/: __init__.py  weather_time_agent.py
amazon-bedrock-agentcore-samples/03-integrations/observability/simple-dual-observability/docs/: braintrust-setup.md  design.md  development.md  generated-files.md  iam-policy-deployment.json  observability-options.md  troubleshooting.md
amazon-bedrock-agentcore-samples/03-integrations/observability/simple-dual-observability/scenarios/: demo-guide.md
amazon-bedrock-agentcore-samples/03-integrations/observability/simple-dual-observability/scripts/: .gitignore  README.md  check_logs.sh  cleanup.sh  delete_agent.py  deploy_agent.py  deploy_agent.sh
amazon-bedrock-agentcore-samples/03-integrations/observability/simple-dual-observability/scripts/tests/: run_load_test.py  run_load_test.sh  test_agent.py  test_agent.sh
amazon-bedrock-agentcore-samples/03-integrations/observability/simple-dual-observability/tools/: __init__.py  calculator_tool.py  time_tool.py  weather_tool.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/: Dockerfile  pyproject.toml  test_gateway.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/: __init__.py  __main__.py  server.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/domain/entities/: conversation.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/domain/ports/: secret_reader.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/domain/repositories/: conversation_repository.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/domain/services/: agent_service.py  conversation_service.py  guardrail_service.py  llm_service.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/infrastructure/adapters/: bedrock_guardrail_service.py  langgraph_agent_service.py  memory_conversation_repository.py  openai_llm_service.py  sql_alchemy_conversation_service.py  tools.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/infrastructure/aws/: parameter_store_reader.py  secret_reader.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/infrastructure/config/: container.py  settings.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/presentation/: __init__.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/presentation/api/: conversation_router.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-backend/cx_agent_backend/presentation/schemas/: conversation_schemas.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-frontend/: Dockerfile  pyproject.toml
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-frontend/src/: app.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-frontend/src/components/: chat.py  config.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-frontend/src/models/: message.py
amazon-bedrock-agentcore-samples/05-blueprints/end-to-end-customer-service-agent/cx-agent-frontend/src/services/: agentcore_client.py  conversation_client.py
usecaseimplementation/: README.md  USER_MANUAL.md
(+478 files in other folders)
