[project]
name = "cost-optimization-agent"
version = "1.0.0"
description = "AWS Cost Optimization Agent using Amazon Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=0.2.0",
    "bedrock-agentcore-starter-toolkit>=0.2.0",
    "strands-agents>=0.1.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
