[project]
name = "customer-support-assistant"
version = "0.1.0"
description = "Customer support agent implementation using Amazon Bedrock AgentCore framework"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "boto3>=1.39.7",
    "botocore>=1.39.7",
    "click>=8.2.1",
    "fastmcp>=0.1.0",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "opensearch-py>=3.0.0",
    "pandas>=2.3.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "requests-aws4auth>=1.3.1",
    "retrying>=1.4.0",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.2.0",
    "streamlit>=1.47.0",
    "streamlit-cookies-controller>=0.0.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
