[project]
name = "agent-core-openlit"
version = "0.1.0"
description = "Amazon Bedrock AgentCore integration with OpenLIT observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "bedrock-agentcore",
    "bedrock-agentcore-starter-toolkit",
    "uv",
    "strands-agents-tools",
    "strands-agents",
    "openlit",
    "opentelemetry-sdk",
]
